Fix property alignment

--- a/src/nOrg.css
+++ b/src/nOrg.css
@@ -36,7 +36,7 @@ body.norg {
 }
 
 .norg-properties {
-    margin-left: 346px;
+    margin-left: 334px;
 }
 .norg-properties-value {
     width: 306px;
